EBNF_compilador.txt
BLOCK = "aww", { STATEMENT }, "wwa" ;

STATEMENT = (( λ | ASSIGNMENT | PRINT), "wwaa") | (BLOCK | WHILE | IF) ;

ASSIGNMENT = IDENTIFIER, "dddd", RELEXPRESSION ;

PRINT = "saaa", "awaw", RELEXPRESSION, "wawa" ;

FUNCTION = "aass", IDENTIFIER, "awaw",  IDENTIFIER, {"aaww", IDENTIFIER}, "wawa", "awww", {STATEMENT}, {"saas", {IDENTIFIER, NUMBER}}, "wwwa";

WHILE = "aaas", "awaw", RELEXPRESSION, "wawa", STATEMENT ;

IF = "aasa" , "awaw", RELEXPRESSION, "wawa", STATEMENT, {"asaa", STATEMENT} ;

RELEXPRESSION = TERM, { ("ddda" | "ddad" | "dadd"), EXPRESSION } ;

EXPRESSION = TERM, { ("addd" | "aadd" | "adda"), TERM } ;

TERM = FACTOR, { ("daad" | "ddaa" | "adad"), FACTOR } ;

FACTOR = (("addd" | "aadd" | "dada"), FACTOR) | NUMBER | "awaw", RELEXPRESSION, "wawa" | IDENTIFIER | SCANF;

SCANF = "aaaa", "awaw", "wawa" ;

IDENTIFIER = LETTER, { LETTER | DIGIT } ;

NUMBER = DIGIT, { DIGIT } ;

LETTER = ( "A" | "W" | "D" | "S" ) ;

DIGIT = ( 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 | 0 ) ;

